version/0.12/_sources/api/solver/_autosummary/settings/file_name_1.rst.txt
:orphan:

.. _file_name_1:

file_name
=========

.. currentmodule:: ansys.fluent.core.solver.settings_231.file_name_1

.. autoclass:: file_name
    :show-inheritance:
    :undoc-members:
.. rubric:: Included in:

========================================================   ====================================================================================================

Parent                                                                                                                                                  Summary

========================================================   ====================================================================================================
:ref:`read <read>`                                                                                                                              'read' command.

:ref:`import_fmu <import_fmu>`                                                                                                               Import a FMU file.

:ref:`read <read_1>`                                                                                                                            'read' command.

:ref:`read_case <read_case>`                                                                                                               'read_case' command.

:ref:`read_case_data <read_case_data>`                                                                                                'read_case_data' command.

:ref:`read_case_setting <read_case_setting>`                                                                                       'read_case_setting' command.

:ref:`read_data <read_data>`                                                                                                               'read_data' command.

:ref:`read_mesh <read_mesh>`                                                                                                               'read_mesh' command.

:ref:`start_journal <start_journal>`                                                                                       Start recording all input in a file.

:ref:`replace_mesh <replace_mesh>`                                                                                                      'replace_mesh' command.

:ref:`write <write>`                                                                                                                           'write' command.

:ref:`save_picture <save_picture>`                                                                                                      'save_picture' command.

:ref:`read <read_3>`                                                                                                           Read display states from a file.

:ref:`write <write_1>`                                                                                                          Write display states to a file.

:ref:`write_views <write_views>`                                                                                           Write selected views to a view file.

:ref:`reduce_picked_sample <reduce_picked_sample>`             Reduce a sample after first picking it and setting up all data-reduction options and parameters.

:ref:`extended_summary <extended_summary>`                                        Print extended discrete phase summary report of particle fates, with options.

:ref:`mass_flow <mass_flow_1>`                                                                                      Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer_1>`                                                                                  Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`                                                         Print sensible heat transfer rate at boundaries.

:ref:`rad_heat_trans <rad_heat_trans>`                                                                        Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                                                                 Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                                                                     Print film heat transfer rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                                                                           Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                                                                       Print viscous work rate at boundaries.

:ref:`write_user_setting <write_user_setting>`                                             Write the contents of the Modified Settings Summary table to a file.

:ref:`number_density <number_density>`                                                                                                'number_density' command.

:ref:`computed_heat_rejection <computed_heat_rejection>`                                                                     'computed_heat_rejection' command.

:ref:`inlet_temperature <inlet_temperature>`                                                                                       'inlet_temperature' command.

:ref:`outlet_temperature <outlet_temperature>`                                                                                    'outlet_temperature' command.

:ref:`mass_flow_rate <mass_flow_rate>`                                                                                                'mass_flow_rate' command.

:ref:`specific_heat <specific_heat_5>`                                                                                                 'specific_heat' command.

:ref:`print_histogram <print_histogram>`                                                                                Print a histogram of a scalar quantity.

:ref:`write_histogram <write_histogram>`                                                                      Write a histogram of a scalar quantity to a file.

:ref:`forces <forces>`                                                                                                                        'forces' command.

:ref:`summary <summary_1>`                                                                                                                Print report summary.

:ref:`surface_integrals <surface_integrals>`                                                                                       'surface_integrals' command.

:ref:`volume_integrals <volume_integrals>`                                                                                          'volume_integrals' command.

========================================================   ====================================================================================================

