version/0.17/_sources/api/solver/_autosummary/settings/file_name_1.rst.txt
:orphan:

.. _file_name_1:

file_name
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.file_name_1.file_name
    :show-inheritance:

.. rubric:: Included in:

================================================================================   ====================================================================================================

Parent                                                                                                                                                                          Summary

================================================================================   ====================================================================================================
:ref:`read <read>`                                                                                                                                                      'read' command.

:ref:`import_fmu <import_fmu>`                                                                                                                                       Import a FMU file.

:ref:`read_macros <read_macros>`                                                                                                                    Read macro definitions from a file.

:ref:`read <read_1>`                                                                                                                                                    'read' command.

:ref:`read_case <read_case>`                                                                                                                                       'read_case' command.

:ref:`read_case_data <read_case_data>`                                                                                                                        'read_case_data' command.

:ref:`read_case_setting <read_case_setting>`                                                                                                               'read_case_setting' command.

:ref:`read_data <read_data>`                                                                                                                                       'read_data' command.

:ref:`read_mesh <read_mesh>`                                                                                                                                       'read_mesh' command.

:ref:`start_journal <start_journal>`                                                                                                               Start recording all input in a file.

:ref:`replace_mesh <replace_mesh>`                                                                                                                              'replace_mesh' command.

:ref:`write <write>`                                                                                                                                                   'write' command.

:ref:`read_settings <read_settings>`                                                                                              Read and set boundary conditions from specified file.

:ref:`read_field_functions <read_field_functions>`                                                                                  Read custom field-function definitions from a file.

:ref:`read_injections <read_injections>`                                                                                                           Read all DPM injections from a file.

:ref:`read_profile <read_profile>`                                                                                    Read boundary profile data (\*.prof, \*.csv). Default is \*.prof.

:ref:`read_pdf <read_pdf>`                                                                                                                                             Read a PDF file.

:ref:`read_isat_table <read_isat_table>`                                                                                                                            Read an ISAT table.

:ref:`start_transcript <start_transcript>`                                                                                                  Start recording input and output in a file.

:ref:`compute_write_vf <compute_write_vf>`                                                                     Compute/write surface clusters and view factors for S2S radiation model.

:ref:`compute_vf_accelerated <compute_vf_accelerated>`                                                                       Compute/Write view factors from existing surface clusters.

:ref:`compute_clusters_and_vf_accelerated <compute_clusters_and_vf_accelerated>`                                             Compute/Write surface cluster first and then view factors.

:ref:`compute_vf_only <compute_vf_only>`                                                                                                               Compute/write view factors only.

:ref:`read_vf_file <read_vf_file>`                                                                                                                                    Read an S2S file.

:ref:`save_picture <save_picture>`                                                                                                                              'save_picture' command.

:ref:`read <read_3>`                                                                                                                                   Read display states from a file.

:ref:`write <write_1>`                                                                                                                                  Write display states to a file.

:ref:`write_views <write_views>`                                                                                                                   Write selected views to a view file.

:ref:`reduce_picked_sample <reduce_picked_sample>`                                     Reduce a sample after first picking it and setting up all data-reduction options and parameters.

:ref:`extended_summary <extended_summary>`                                                                Print extended discrete phase summary report of particle fates, with options.

:ref:`mass_flow <mass_flow_1>`                                                                                                              Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer>`                                                                                                            Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`                                                                                 Print sensible heat transfer rate at boundaries.

:ref:`rad_heat_trans <rad_heat_trans>`                                                                                                Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                                                                                         Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                                                                                             Print film heat transfer rate at boundaries.

:ref:`electric_current <electric_current>`                                                                                                   Print electric current rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                                                                                                   Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                                                                                               Print viscous work rate at boundaries.

:ref:`write_user_setting <write_user_setting>`                                                                     Write the contents of the Modified Settings Summary table to a file.

:ref:`number_density <number_density>`                                                                                                                        'number_density' command.

:ref:`computed_heat_rejection <computed_heat_rejection>`                                                                                             'computed_heat_rejection' command.

:ref:`inlet_temperature <inlet_temperature>`                                                                                                               'inlet_temperature' command.

:ref:`outlet_temperature <outlet_temperature>`                                                                                                            'outlet_temperature' command.

:ref:`mass_flow_rate <mass_flow_rate_1>`                                                                                                                      'mass_flow_rate' command.

:ref:`specific_heat <specific_heat_5>`                                                                                                                         'specific_heat' command.

:ref:`print <print_3>`                                                                                                                          Print a histogram of a scalar quantity.

:ref:`write <write_2>`                                                                                                                Write a histogram of a scalar quantity to a file.

:ref:`forces <forces>`                                                                                                                                                'forces' command.

:ref:`summary <summary_1>`                                                                                                                                        Print report summary.

:ref:`surface_integrals <surface_integrals>`                                                                                                          Create a surface integral report.

:ref:`volume_integrals <volume_integrals>`                                                                                                             Create a volume integral report.

================================================================================   ====================================================================================================

